Updating some dependencies with vulnerabilities. Added clickable icons to clear search filtering and category filtering. Fixed some areas where inline styles were being used instead of tailwind classes.